Fix disabled input text invisible on Safari (#428)

--- a/sass/modules/_forms.scss
+++ b/sass/modules/_forms.scss
@@ -31,6 +31,7 @@
 }
 
 %hui-input-disabled {
+  -webkit-text-fill-color: $grey-light;
   border-bottom-color: $grey-light;
   color: $grey-light;
 }
